initial and buggy suppodark mode support

--- a/static/styles.css
+++ b/static/styles.css
@@ -1,3 +1,27 @@
+:root {
+    --body-bg: white;
+    --body: black;
+    --nav-a-hover-not-active: black;
+    --nav-a-active: purple;
+    --loader-bg: #ccc8;
+    --loader-border: #f3f3f3;
+    --loader-border-top: #3498db;
+}
+
+[color-theme="dark"] {
+    --body-bg: black;
+    --body: white;
+    --nav-a-hover-not-active: #183c61;
+    --nav-a-active: #521555;
+    --loader-bg: #000c;
+    --loader-border: #343434;
+    --loader-border-top: #0b2232;
+}
+
+body {
+    background-color: var(--body-bg);
+    color: var(--body)
+}
 nav {
     list-style-type: none;
     margin: 0;
@@ -20,11 +44,11 @@ nav>a {
 }
 
 nav>a:hover:not(.active) {
-    background-color: black;
+    background-color: var(--nav-a-hover-not-active);
 }
 
 nav>a.active {
-    background-color: purple;
+    background-color: var(--nav-a-active);
 }
 
 nav>a.auth,
@@ -39,7 +63,7 @@ div.loader {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: #ccc8;
+    background-color: var(--loader-bg);
 }
 
 div.loader>div {
@@ -50,9 +74,9 @@ div.loader>div {
     width: 200px;
     height: 200px;
 
-    border: 16px solid #f3f3f3;
+    border: 16px solid var(--loader-border);
     /* Light grey */
-    border-top: 16px solid #3498db;
+    border-top: 16px solid var(--loader-border-top);
     /* Blue */
     border-radius: 50%;
     animation: spin 2s linear infinite;
